--- a/pc-games.html
+++ b/pc-games.html
@@ -1,81 +1,123 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PC Games</title>
-<style>
-* { margin:0; padding:0; box-sizing:border-box; font-family:'Poppins',sans-serif; }
-body { background:#000; color:#f5f5f5; min-height:100vh; padding:2rem; display:flex; flex-direction:column; justify-content:flex-start; }
-.header { text-align:center; margin-bottom:1.5rem; }
-.page-title { font-size:2.5rem; font-weight:700; background:linear-gradient(45deg,#fff,#aaa); -webkit-background-clip:text; -webkit-text-fill-color:transparent; margin-bottom:1rem; }
-.games-grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 1.5rem; }
-.game-card { background:rgba(255,255,255,.05); border:1px solid rgba(255,255,255,.1); border-radius:15px; overflow:hidden; cursor:pointer; transition:transform .3s,box-shadow .3s; display:flex; flex-direction:column; }
-.game-card:hover { transform:translateY(-5px); box-shadow:0 10px 10px rgba(0,0,0,.5); }
-.game-image { width:100%; aspect-ratio:16/9; object-fit:contain; background:#000; display:block; }
-.game-info { padding:1rem; display:flex; align-items:center; justify-content:center; }
-.game-title { font-size:clamp(1rem,2vw,1.2rem); font-weight:500; overflow:hidden; text-overflow:ellipsis; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; line-height:1.3; text-align:center; }
-.no-results { display:block; text-align:center; padding:2rem; color:#888; }
-</style>
-</head>
-<body>
-
-<div class="header">
-  <h1 class="page-title">PC Games</h1>
-  <h2><a style="color:white;" href="instructions.txt" target="_blank">Click here if you're confused</a></h2>
-</div>
-
-<div class="games-grid" id="gamesGrid">
-  <div class="no-results" id="noResults">Loading PC games...</div>
-</div>
-<script>
-// Load PC games from JSON with timestamp to avoid caching
-const ts = Date.now();
-fetch(`https://raw.githubusercontent.com/Calvin99Cooler/pc-games/main/pc-games.json?t=${ts}`)
-  .then(response => response.json())
-  .then(games => {
-    const grid = document.getElementById('gamesGrid');
-    const noResults = document.getElementById('noResults');
-    grid.innerHTML = ''; // clear loading text
-
-    if(games.length === 0){
-      noResults.textContent = 'No PC games found.';
-      grid.appendChild(noResults);
-      return;
+<!-- ==========  PC-GAMES WIDGET  ========== -->
+<div id="pc-games-widget">
+  <style>
+    #pc-games-widget *{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}
+    #pc-games-widget{
+      background:#000;
+      color:#f5f5f5;
+      min-height:100vh;
+      padding:2rem;
+      display:flex;
+      flex-direction:column;
     }
+    #pc-games-widget .header{text-align:center;margin-bottom:1.5rem}
+    #pc-games-widget .page-title{
+      font-size:2.5rem;
+      font-weight:700;
+      background:linear-gradient(45deg,#fff,#aaa);
+      -webkit-background-clip:text;
+      -webkit-text-fill-color:transparent;
+      margin-bottom:1rem;
+    }
+    #pc-games-widget .games-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fill,minmax(250px,1fr));
+      gap:1.5rem;
+    }
+    #pc-games-widget .game-card{
+      background:rgba(255,255,255,.05);
+      border:1px solid rgba(255,255,255,.1);
+      border-radius:15px;
+      overflow:hidden;
+      cursor:pointer;
+      transition:transform .3s,box-shadow .3s;
+      display:flex;
+      flex-direction:column;
+    }
+    #pc-games-widget .game-card:hover{
+      transform:translateY(-5px);
+      box-shadow:0 10px 10px rgba(0,0,0,.5);
+    }
+    #pc-games-widget .game-image{
+      width:100%;
+      aspect-ratio:16/9;
+      object-fit:contain;
+      background:#000;
+      display:block;
+    }
+    #pc-games-widget .game-info{
+      padding:1rem;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    #pc-games-widget .game-title{
+      font-size:clamp(1rem,2vw,1.2rem);
+      font-weight:500;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      display:-webkit-box;
+      -webkit-line-clamp:2;
+      -webkit-box-orient:vertical;
+      line-height:1.3;
+      text-align:center;
+    }
+    #pc-games-widget .no-results{
+      display:block;
+      text-align:center;
+      padding:2rem;
+      color:#888;
+    }
+  </style>
 
-    games.forEach(game => {
-      const card = document.createElement('div');
-      card.className = 'game-card';
-      card.onclick = () => window.open(game.url, '_blank');
+  <div class="header">
+    <h1 class="page-title">PC Games</h1>
+    <h2><a style="color:white;" href="instructions.txt" target="_blank">Click here if you're confused</a></h2>
+  </div>
 
-      const img = document.createElement('img');
-      img.className = 'game-image';
-      img.src = game.img;
-      img.alt = game.name;
+  <div class="games-grid" id="gamesGrid">
+    <div class="no-results">Loading PC games...</div>
+  </div>
 
-      const info = document.createElement('div');
-      info.className = 'game-info';
+  <script>
+    (() => {
+      const grid = document.getElementById('gamesGrid');
+      const noRes = grid.querySelector('.no-results');
+      const ts = Date.now();
 
-      const title = document.createElement('div');
-      title.className = 'game-title';
-      title.textContent = game.name;
+      fetch(`https://raw.githubusercontent.com/Calvin99Cooler/pc-games/main/pc-games.json?t=${ts}`)
+        .then(r => r.json())
+        .then(games => {
+          if (!games.length) {
+            noRes.textContent = 'No PC games found.';
+            return;
+          }
+          grid.innerHTML = '';
+          games.forEach(g => {
+            const card = document.createElement('div');
+            card.className = 'game-card';
+            card.onclick = () => window.open(g.url, '_blank');
 
-      info.appendChild(title);
-      card.appendChild(img);
-      card.appendChild(info);
-      grid.appendChild(card);
-    });
-  })
-  .catch(err => {
-    const noResults = document.getElementById('noResults');
-    noResults.textContent = 'Failed to load PC games.';
-    const grid = document.getElementById('gamesGrid');
-    grid.innerHTML = '';
-    grid.appendChild(noResults);
-    console.error(err);
-  });
-</script>
+            const img = document.createElement('img');
+            img.className = 'game-image';
+            img.src = g.img;
+            img.alt = g.name;
 
-</body>
-</html>
+            const info = document.createElement('div');
+            info.className = 'game-info';
+            const title = document.createElement('div');
+            title.className = 'game-title';
+            title.textContent = g.name;
+            info.appendChild(title);
+
+            card.append(img, info);
+            grid.appendChild(card);
+          });
+        })
+        .catch(err => {
+          noRes.textContent = 'Failed to load PC games.';
+          console.error(err);
+        });
+    })();
+  </script>
+</div>
