--- a/unbl0ck.html
+++ b/unbl0ck.html
@@ -1,153 +1,128 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Clever | Portal</title>
-<link rel="icon" href="https://assets.clever.com/launchpad/4cfe59076/favicon.ico" type="image/x-icon">
-<style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
+<!-- ==========  UNBLOCKER WIDGET  ========== -->
+<div id="unblocker-widget">
+  <style>
+    #unblocker-widget{
+      --bg:#000;
+      --fg:#f5f5f5;
+      background:var(--bg);
+      color:var(--fg);
+      min-height:100vh;
+      padding:1rem;
+      font-family:Poppins,sans-serif;
+    }
+    #unblocker-widget *{margin:0;padding:0;box-sizing:border-box;}
+    #unblocker-widget #version-indicator{
+      font-size:2rem;
+      font-weight:500;
+      text-align:center;
+      margin-bottom:1rem;
+    }
+    #unblocker-widget .wrap{
+      max-width:800px;
+      margin:auto;
+      display:flex;
+      flex-wrap:wrap;
+      justify-content:space-between;
+      gap:0.5rem;
+    }
+    #unblocker-widget .left,#unblocker-widget .right{
+      display:flex;
+      flex-direction:column;
+      gap:0.5rem;
+      flex:1;
+      min-width:280px;
+    }
+    #unblocker-widget .left h2{
+      font-size:1.8rem;
+      font-weight:700;
+      background:linear-gradient(45deg,#fff,#aaa);
+      -webkit-background-clip:text;
+      -webkit-text-fill-color:transparent;
+      text-align:center;
+    }
+    #unblocker-widget button{
+      background:linear-gradient(45deg,#fff,#aaa);
+      color:#000;
+      font-weight:600;
+      border:none;
+      padding:0.5rem 1.25rem;
+      font-size:1rem;
+      border-radius:25px;
+      cursor:pointer;
+      transition:transform .3s, box-shadow .3s;
+    }
+    #unblocker-widget button:hover{
+      transform:translateY(-3px);
+      box-shadow:0 5px 15px rgba(0,0,0,.5);
+    }
+    #unblocker-widget #link-display a{
+      display:inline-block;
+      background:rgba(255,255,255,.05);
+      padding:0.5rem 1rem;
+      border-radius:15px;
+      border:1px solid rgba(255,255,255,.1);
+      color:#f5f5f5;
+      font-size:1rem;
+      text-decoration:none;
+      transition:transform .3s, box-shadow .3s;
+    }
+    #unblocker-widget #link-display a:hover{
+      transform:translateY(-3px);
+      box-shadow:0 5px 15px rgba(0,0,0,.5);
+      color:#8aa0ff;
+    }
+    #unblocker-widget .indicator{
+      width:16px;
+      height:16px;
+      border-radius:50%;
+      background:#4cff7c;
+    }
+    #unblocker-widget .right span{
+      font-size:1rem;
+    }
+  </style>
 
-body {
-  background: #000;
-  color: #f5f5f5;
-  min-height: 100vh;
-  padding: 1rem;
-}
+  <div id="version-indicator">Version: …</div>
 
-#version-indicator {
-  font-size: 2rem;
-  font-weight: 500;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.wrap {
-  max-width: 800px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 0.5rem;
-}
-
-.left, .right {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  flex: 1;
-  min-width: 280px;
-}
-
-.left h2 {
-  font-size: 1.8rem;
-  font-weight: 700;
-  background: linear-gradient(45deg,#fff,#aaa);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-align: center;
-}
-
-button {
-  background: linear-gradient(45deg,#fff,#aaa);
-  color: #000;
-  font-weight: 600;
-  border: none;
-  padding: 0.5rem 1.25rem;
-  font-size: 1rem;
-  border-radius: 25px;
-  cursor: pointer;
-  transition: transform .3s, box-shadow .3s;
-}
-button:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 5px 15px rgba(0,0,0,.5);
-}
-
-#link-display a {
-  display: inline-block;
-  background: rgba(255,255,255,.05);
-  padding: 0.5rem 1rem;
-  border-radius: 15px;
-  border: 1px solid rgba(255,255,255,.1);
-  color: #f5f5f5;
-  font-size: 1rem;
-  text-decoration: none;
-  transition: transform .3s, box-shadow .3s;
-}
-#link-display a:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 5px 15px rgba(0,0,0,.5);
-  color: #8aa0ff;
-}
-
-.indicator {
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #4cff7c;
-}
-
-.right span {
-  font-size: 1rem;
-}
-</style>
-</head>
-
-<body>
-
-<div id="version-indicator">Version: ...</div>
-
-<div class="wrap">
-  <div class="left">
-    <h2>Unblocker link generator</h2>
-    <button onclick="showRandomLink()">Click me for a random working unblocker link</button>
-    <div id="link-display"></div>
-  </div>
-
-  <div class="right">
-    <div style="display:flex;align-items:center;gap:.5rem;">
-      <div class="indicator"></div>
-      <span id="site-count"></span>
+  <div class="wrap">
+    <div class="left">
+      <h2>Unblocker link generator</h2>
+      <button id="gen-btn">Click me for a random working unblocker link</button>
+      <div id="link-display"></div>
     </div>
-    <div>These links will be updated regularly.</div>
+
+    <div class="right">
+      <div style="display:flex;align-items:center;gap:.5rem;">
+        <div class="indicator"></div>
+        <span id="site-count"></span>
+      </div>
+      <div>These links will be updated regularly.</div>
+    </div>
   </div>
+
+  <script>
+    (() => {
+      const links = [
+        "https://environment.inpact.net/",
+        "https://whs-001.roig.com/",
+        "https://quickcalc.inpact.net/",
+        "https://whs-001.absl.ro/",
+        "https://whs-001.littlejaco.com/",
+        "https://whs-001.wroth.org/"
+      ];
+
+      document.getElementById('site-count').textContent = `${links.length} Available Unblockers`;
+
+      document.getElementById('gen-btn').addEventListener('click', () => {
+        const url = links[Math.floor(Math.random() * links.length)];
+        document.getElementById('link-display').innerHTML =
+          `<a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a>`;
+      });
+
+      fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${Date.now()}`)
+        .then(r => r.text())
+        .then(v => document.getElementById('version-indicator').textContent = `Version: ${v.trim()}`)
+        .catch(() => document.getElementById('version-indicator').textContent = 'Version: unavailable');
+    })();
+  </script>
 </div>
-
-<script>
-const links = [
-  "https://environment.inpact.net/",
-  "https://whs-001.roig.com/",
-  "https://quickcalc.inpact.net/",
-  "https://whs-001.absl.ro/",
-  "https://whs-001.littlejaco.com/",
-  "https://whs-001.wroth.org/"
-];
-
-document.getElementById("site-count").textContent = `${links.length} Available Unblockers`;
-
-function showRandomLink() {
-  const randomLink = links[Math.floor(Math.random() * links.length)];
-  document.getElementById("link-display").innerHTML =
-    `<a href="${randomLink}" target="_blank" rel="noopener noreferrer">${randomLink}</a>`;
-}
-
-// Fetch version from GitHub
-const versionURL = `https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${Date.now()}`;
-fetch(versionURL)
-  .then(res => res.text())
-  .then(v => {
-    document.getElementById('version-indicator').textContent = `Version: ${v.trim()}`;
-  })
-  .catch(() => {
-    document.getElementById('version-indicator').textContent = 'Version: unavailable';
-  });
-</script>
-
-</body>
-</html>
