--- a/games.html
+++ b/games.html
@@ -9,30 +9,113 @@
 
   cnt.innerHTML = `
 <style>
-/* ----------  scoped styles  ---------- */
-#bzg-root *{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}
-#bzg-root{--bg:#000;--fg:#f5f5f5;--accent:rgba(255,255,255,.1);--pad:1.5rem;
-          background:var(--bg);color:var(--fg);min-height:100vh;display:flex;flex-direction:column;
-          padding:var(--pad);line-height:1.3}
-#bzg-header{text-align:center;margin-bottom:var(--pad)}
-#bzg-title{font-size:2.5rem;font-weight:700;
-           background:linear-gradient(45deg,#fff,#aaa);-webkit-background-clip:text;
-           -webkit-text-fill-color:transparent;margin-bottom:1rem}
-#bzg-version{font-size:2rem;font-weight:500;margin-bottom:.5rem}
-#bzg-search{width:100%;max-width:500px;margin:0 auto var(--pad);display:block;
-            padding:.75rem 1rem;border:1px solid rgba(255,255,255,.2);
-            border-radius:25px;background:rgba(255,255,255,.05);color:#fff;outline:0}
-#bzg-search:focus{border-color:rgba(255,255,255,.4)}
-#bzg-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));gap:var(--pad);flex:1}
-.bzg-card{background:var(--accent);border:1px solid var(--accent);border-radius:15px;
-          overflow:hidden;cursor:pointer;transition:transform .3s,box-shadow .3s;height:220px;
-          display:flex;flex-direction:column}
-.bzg-card:hover{transform:translateY(-5px);box-shadow:0 10px 20px rgba(0,0,0,.5)}
-.bzg-img{width:100%;height:150px;object-fit:contain;background:#000;display:block}
-.bzg-info{padding:1rem;flex:1}
-.bzg-name{font-size:1rem;font-weight:500;overflow:hidden;text-overflow:ellipsis;
-          display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical}
-#bzg-empty{text-align:center;padding:2rem;color:#888;display:none}
+#bzg-root * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Poppins, sans-serif;
+}
+#bzg-root {
+  --bg: #000;
+  --fg: #f5f5f5;
+  --accent: rgba(255, 255, 255, 0.1);
+  --pad: 1.5rem;
+  background: var(--bg);
+  color: var(--fg);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: var(--pad);
+  line-height: 1.3;
+}
+#bzg-header {
+  text-align: center;
+  margin-bottom: var(--pad);
+}
+#bzg-title {
+  font-size: 2.5rem;
+  font-weight: 700;
+  background: linear-gradient(45deg, #fff, #aaa);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 1rem;
+}
+#bzg-version {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+#bzg-search {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto var(--pad);
+  display: block;
+  padding: 0.75rem 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 25px;
+  background: rgba(255, 255, 255, 0.05);
+  color: #fff;
+  outline: 0;
+}
+#bzg-search:focus {
+  border-color: rgba(255, 255, 255, 0.4);
+}
+#bzg-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: var(--pad);
+  flex: 1;
+}
+.bzg-card {
+  background: var(--accent);
+  border: 1px solid var(--accent);
+  border-radius: 15px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.3s, box-shadow 0.3s;
+  height: 220px;
+  display: flex;
+  flex-direction: column;
+}
+.bzg-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+}
+.bzg-img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+  background: #000;
+  display: block;
+}
+.bzg-info {
+  padding: 1rem 1rem 0.75rem 1rem;
+  flex: 1;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.bzg-name {
+  font-size: clamp(1rem, 2vw, 1.2rem);
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-height: 1.3;
+  text-align: center;
+  padding-top: 0.5rem;
+  width: 100%;
+}
+#bzg-empty {
+  text-align: center;
+  padding: 2rem;
+  color: #888;
+  display: none;
+}
 </style>
 
 <div id="bzg-root">
