--- a/pc-games.html
+++ b/pc-games.html
@@ -45,23 +45,33 @@
       background:#000;
       display:block;
     }
-    #pc-games-widget .game-info{
-      padding:1rem;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
-    #pc-games-widget .game-title{
-      font-size:clamp(1rem,2vw,1.2rem);
-      font-weight:500;
-      overflow:hidden;
-      text-overflow:ellipsis;
-      display:-webkit-box;
-      -webkit-line-clamp:2;
-      -webkit-box-orient:vertical;
-      line-height:1.3;
-      text-align:center;
-    }
+#pc-games-widget .game-info {
+  padding: 0.5rem 1rem 1rem 1rem; /* adjust top/bottom spacing */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background: rgba(255,255,255,.05); /* same as game card */
+  border-top-left-radius: 0; /* optional: keep corners sharp at top */
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  width: 100%;
+}
+
+#pc-games-widget .game-title {
+  font-size: clamp(1rem, 2vw, 1.2rem);
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-height: 1.3;
+  text-align: center;
+  padding-top: 0.5rem; /* space above the title */
+  width: 100%;
+  color: #f5f5f5; /* make sure text is visible on dark background */
+}
     #pc-games-widget .no-results{
       display:block;
       text-align:center;
