--- a/unbl0ck.html
+++ b/unbl0ck.html
@@ -119,11 +119,11 @@
           `<a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a>`;
       });
 
-      const el = document.getElementById('version-indicator');
-      fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${Date.now()}`)
-        .then(r => r.text())
-        .then(v => el.textContent = `Version: ${v.trim()}`)
-        .catch(() => el.textContent = 'Version: unavailable');
-    })();
+  const el = document.getElementById('version-indicator');
+  fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.json?t=${Date.now()}`)
+    .then(r => r.json())
+    .then(data => el.textContent = `Version: ${data.version}`)
+    .catch(() => el.textContent = 'Version: unavailable');
+})();
   </script>
 </div>
