--- a/single-html/Gladi-hoppers.html
+++ b/single-html/Gladi-hoppers.html
@@ -25,6 +25,7 @@
     </script>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/gh/genizy/gh/patch/js/poki-master-loader.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/bazinga-games-assets@latest/gladih/poki-master-loader.js"></script>
 </body>
 </html>
+
