--- a/single-html/Gladi-hoppers.html
+++ b/single-html/Gladi-hoppers.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-   <meta charset="utf-8">
+    
+    
+    <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Gladihoppers</title>
     <script>
@@ -24,8 +27,9 @@
         };
     </script>
 </head>
-<body>
-    <script src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/bazinga-games-assets@latest/gladih/poki-master-loader.js"></script>
-</body>
-</html>
 
+<body>
+    <script src="https://cdn.jsdelivr.net/gh/genizy/gh/patch/js/poki-master-loader.js"></script>
+</body>
+
+</html>
