--- a/single-html/Gladi-hoppers.html
+++ b/single-html/Gladi-hoppers.html
@@ -6,14 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script>
-    // Unity game configuration
     window.config = {
       loader: 'unity',
       debug: false,
       maxRatio: 16 / 9,
       minRatio: 9 / 16,
       title: 'Gladihoppers',
-      // Use a blank image to prevent 404 errors
       thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAE0lEQVR42mP8/5+hHgAHggJ/P+X4tgAAAABJRU5ErkJggg==',
       numScreenshots: 5,
       unityVersion: '2019.3.13f1',
@@ -26,19 +24,18 @@
       },
     };
 
-    // Suppress global errors for missing resources
+    // Suppress all JS errors without affecting game
     window.addEventListener('error', function(e) {
       e.stopImmediatePropagation();
       return true;
     }, true);
 
-    // Suppress unhandled promise rejections
     window.addEventListener('unhandledrejection', function(e) {
       e.preventDefault();
       return true;
     });
 
-    // Load Poki loader safely
+    // Safe loader insertion (doesn't interfere with fonts/SDK)
     (function() {
       var script = document.createElement('script');
       script.src = 'https://cdn.jsdelivr.net/gh/genizy/gh/patch/js/poki-master-loader.js';
