--- a/single-html/Gladi-hoppers.html
+++ b/single-html/Gladi-hoppers.html
@@ -1,67 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="utf-8">
-  <title>Gladihoppers</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <script>
-    window.config = {
-      loader: 'unity',
-      debug: false,
-      maxRatio: 16 / 9,
-      minRatio: 9 / 16,
-      title: 'Gladihoppers',
-      thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAE0lEQVR42mP8/5+hHgAHggJ/P+X4tgAAAABJRU5ErkJggg==',
-      numScreenshots: 5,
-      unityVersion: '2019.3.13f1',
-      unityWebglBuildUrl: 'https://cdn.jsdelivr.net/gh/Calvin99Cooler/bazinga-games-assets@main/gladih/Build/Gladihoppers.json',
-      fileSize: 23,
-      cachedDecompressedFileSizes: {
-        'Gladihoppers.data.unityweb': 17409938,
-        'Gladihoppers.wasm.code.unityweb': 6410659,
-        'Gladihoppers.wasm.framework.unityweb': 91463,
-      },
-    };
-
-    // Suppress all JS errors without affecting game
-    window.addEventListener('error', function(e) {
-      e.stopImmediatePropagation();
-      return true;
-    }, true);
-
-    window.addEventListener('unhandledrejection', function(e) {
-      e.preventDefault();
-      return true;
-    });
-
-    // Safe loader insertion (doesn't interfere with fonts/SDK)
-    (function() {
-      var script = document.createElement('script');
-      script.src = 'https://cdn.jsdelivr.net/gh/genizy/gh/patch/js/poki-master-loader.js';
-      script.async = true;
-      script.onerror = function() {
-        // fail silently
-      };
-      document.head.appendChild(script);
-    })();
-  </script>
-
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      overflow: hidden;
-    }
-    canvas, #unityContainer {
-      width: 100vw;
-      height: 100vh;
-      display: block;
-    }
-  </style>
+    
+    
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Gladihoppers</title>
+    <script>
+        window.config = {
+            loader: 'unity',
+            debug: false,
+            maxRatio: 16 / 9,
+            minRatio: 9 / 16,
+            title: 'Gladihoppers',
+            thumbnail: 'https://cdn.jsdelivr.net/gh/genizy/gh/patch/png/null.png',
+            numScreenshots: 5,
+            unityVersion: '2019.3.13f1',
+            unityWebglBuildUrl: 'https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games-assets/refs/heads/main/gladih/Build/Gladihoppers.json',
+            fileSize: 23,
+            cachedDecompressedFileSizes: {
+                'Gladihoppers.data.unityweb': 17409938,
+                'Gladihoppers.wasm.code.unityweb': 6410659,
+                'Gladihoppers.wasm.framework.unityweb': 91463,
+            },
+        };
+    </script>
 </head>
 
 <body>
-  <div id="unityContainer"></div>
+    <script src="https://cdn.jsdelivr.net/gh/genizy/gh/patch/js/poki-master-loader.js"></script>
 </body>
+
 </html>
