--- a/single-html/Crazy Cattle 3D.html
+++ b/single-html/Crazy Cattle 3D.html
@@ -70,7 +70,7 @@
 
     <div id="status">
       <img id="status-splash" class="show-image--true fullsize--true use-filter--true"
-           src="CrazyCattle3D.png" alt="" />
+           src="https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games-assets/refs/heads/main/cc3d/CrazyCattle3D.png" alt="" />
       <progress id="status-progress"></progress>
       <div id="status-notice"></div>
     </div>
