--- a/single-html/Fancy Pants Adventure.html
+++ b/single-html/Fancy Pants Adventure.html
@@ -1,16 +1,18 @@
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AndreajnRcm4/b398dl2h74v@9a23fbb2373d743a564873251cbb57736ebc1f73/style.css" type="text/css" />
-    
-</head>
-<body>
-<script src="https://cdn.jsdelivr.net/gh/u-cvlassrom-y/google@main/ruffle.js"></script>
-
-<object width="100%" height="100%">
-    <param name="movie" value="https://cdn.jsdelivr.net/gh/supaub/interstellar-3@8a13c735e7df6d86602b354e45c090405f21f45a/play/flash/swf/fancypantsadventure.swf">
-    <embed src="https://cdn.jsdelivr.net/gh/supaub/interstellar-3@8a13c735e7df6d86602b354e45c090405f21f45a/play/flash/swf/fancypantsadventure.swf" width="100%" height="100%">
-</body>
-</html>
+
+
+<style>
+.top-layer {
+             overflow-y: auto;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fff; 
+            z-index: 9999;
+        }
+    </style>
+    <div class="top-layer">
+        <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+        <embed height="100%" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/bazinga-games-assets@main/flash-swf/fancypantsman.swf" type="application/x-shockwave-flash" width="100%"></embed>
+    </div>
