--- a/single-html/Basketball Legends (flash).html
+++ b/single-html/Basketball Legends (flash).html
@@ -14,5 +14,5 @@
     </style>
     <div class="top-layer">
         <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-        <embed height="100%" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/bazinga-games-assets@a7639faab9cdc9f45a1d7d57fbd45f94b1110ece/flash-swf/basketballlegends-flash.swf" type="application/x-shockwave-flash" width="100%"></embed>
+        <embed height="100%" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/bazinga-games-assets@main/flash-swf/basketball-legends.swf" type="application/x-shockwave-flash" width="100%"></embed>
     </div>
