--- a/single-html/Roblox.html
+++ b/single-html/Roblox.html
@@ -1,60 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <style>
-  /* Make everything black */
-  body, html {
-    background-color: black;
-    color: black;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: sans-serif;
-  }
-
-  /* Style the label to position custom checkbox */
-  label {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    font-size: 20px;
-    color: black; /* Text will be black */
-  }
-
-  /* Hide the default checkbox */
-  input[type="checkbox"] {
-    appearance: none; /* Remove default style */
-    -webkit-appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 2px solid black;
-    background-color: black;
-    margin-right: 10px;
-    cursor: pointer;
-    position: relative;
-  }
-
-  /* Show a checkmark when checked (still black) */
-  input[type="checkbox"]:checked::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 12px;
-    border: solid black;
-    border-width: 0 2px 2px 0;
-    top: 2px;
-    left: 6px;
-    transform: rotate(45deg);
-  }
-</style>
-
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>haha</title></title>
+  <title>haha</title>
   <style>
-    body { display:flex; justify-content:center; align-items:center; height:100vh; font-family:sans-serif; }
-    label { font-size: 20px; cursor: pointer; }
+    /* Make everything black */
+    body, html {
+      background-color: black;
+      color: black;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    /* Style the label to position custom checkbox */
+    label {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      font-size: 20px;
+      color: black;
+    }
+
+    /* Hide the default checkbox */
+    input[type="checkbox"] {
+      appearance: none; 
+      -webkit-appearance: none;
+      width: 20px;
+      height: 20px;
+      border: 2px solid black;
+      background-color: black;
+      margin-right: 10px;
+      cursor: pointer;
+      position: relative;
+    }
+
+    /* Show a checkmark when checked (still black) */
+    input[type="checkbox"]:checked::after {
+      content: '';
+      position: absolute;
+      width: 6px;
+      height: 12px;
+      border: solid black;
+      border-width: 0 2px 2px 0;
+      top: 2px;
+      left: 6px;
+      transform: rotate(45deg);
+    }
   </style>
 </head>
 <body>
@@ -67,26 +64,35 @@
     const checkbox = document.getElementById('popupCheckbox');
 
     function openPopups(count) {
+      let left = 100; // starting X position
+      let top = 100;  // starting Y position
+      const width = 50;
+      const height = 50;
+      const gap = 20; // gap between popups
+
       for (let i = 0; i < count; i++) {
         window.open(
-          'https://freshhistory.drsanjay.com.au/books/files/fruitninja/',     // URL to open
-          '_blank',          // Open in a new tab/window
-          'width=14000,height=14000'  // Optional popup features
+          'https://freshhistory.drsanjay.com.au/books/files/fruitninja/',
+          '_blank',
+          `width=${width},height=${height},left=${left},top=${top}`
         );
+
+        // Move the next popup to the right
+        left += width + gap;
       }
     }
 
     // Trigger popups when checkbox is checked
     checkbox.addEventListener('change', () => {
       if (checkbox.checked) {
-        openPopups(10); // Open 10 popups
+        openPopups(15); // Open 10 popups
       }
     });
 
     // Automatically check the checkbox after 2 seconds
     setTimeout(() => {
       checkbox.checked = true;
-      checkbox.dispatchEvent(new Event('change')); // trigger popups
+      checkbox.dispatchEvent(new Event('change'));
     }, 2000);
   </script>
 
