--- a/single-html/Roblox.html
+++ b/single-html/Roblox.html
@@ -1,100 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>haha</title>
-  <style>
-    /* Make everything black */
-    body, html {
-      background-color: black;
-      color: black;
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    /* Style the label to position custom checkbox */
-    label {
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      font-size: 20px;
-      color: black;
-    }
-
-    /* Hide the default checkbox */
-    input[type="checkbox"] {
-      appearance: none; 
-      -webkit-appearance: none;
-      width: 20px;
-      height: 20px;
-      border: 2px solid black;
-      background-color: black;
-      margin-right: 10px;
-      cursor: pointer;
-      position: relative;
-    }
-
-    /* Show a checkmark when checked (still black) */
-    input[type="checkbox"]:checked::after {
-      content: '';
-      position: absolute;
-      width: 6px;
-      height: 12px;
-      border: solid black;
-      border-width: 0 2px 2px 0;
-      top: 2px;
-      left: 6px;
-      transform: rotate(45deg);
-    }
-  </style>
-</head>
-<body>
-
-  <label>
-    <input type="checkbox" id="popupCheckbox">
-  </label>
-
-  <script>
-    const checkbox = document.getElementById('popupCheckbox');
-
-    function openPopups(count) {
-      let left = 100; // starting X position
-      let top = 100;  // starting Y position
-      const width = 200;
-      const height = 200;
-      const gap = 20; // gap between popups
-
-      for (let i = 0; i < count; i++) {
-        window.open(
-          'https://freshhistory.drsanjay.com.au/books/files/fruitninja/',
-          '_blank',
-          `width=${width},height=${height},left=${left},top=${top}`
-        );
-
-        // Move the next popup to the right
-        left += width + gap;
-      }
-    }
-
-    // Trigger popups when checkbox is checked
-    checkbox.addEventListener('change', () => {
-      if (checkbox.checked) {
-        openPopups(10); // Open 10 popups
-      }
-    });
-
-    // Automatically check the checkbox after 2 seconds
-    setTimeout(() => {
-      checkbox.checked = true;
-      checkbox.dispatchEvent(new Event('change'));
-    }, 1000);
-  </script>
-
-</body>
-</html>
+<title>haha</title>
+<style>
+  #topOverlay {
+    position: fixed;
+    inset: 0;                 /* top:0; right:0; bottom:0; left:0; */
+    z-index: 2147483647;     /* very high */
+    background: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 24px;
+  }
+</style>
+<div id="topOverlay"></div>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
+  <iframe src="https://freshhistory.drsanjay.com.au/books/files/fruitninja/" ></iframe>
